# ex1

./: .gitignore  CMakeLists.txt  ErrorCode.c  ErrorCode.h  Matrix.c  Matrix.h  README.md  details.txt  ex1.cpp  main.c  matrix.h
src/: ErrorCode.c  ErrorCode.h  Matrix.c  Matrix.h
